--- a/passwords.adoc
+++ b/passwords.adoc
@@ -1,5 +1,10 @@
 Remote Skytap login (rarely used): _user, pw_
 
-Remote VM Login: _student, ???_
+Remote VM Login (for when you lock the remote screen): _student, ???_
+
+Local Student login: ...
+
+Postgresql Web App access: _student, student_
 
 Postgresql Admin (should not be needed): _postgres, pgAdmin_
+
