--- a/passwords.adoc
+++ b/passwords.adoc
@@ -1,10 +1,13 @@
 Remote Skytap login (rarely used): _user, pw_
 
-Remote VM Login (for when you lock the remote screen): _student, ???_
+Remote VM Login (for when you lock the remote screen): _student_, either _pw_ or _studentpw_
 
-Local Student login: ...
+Local Student login: n/a
 
 Postgresql Web App access: _student, student_
 
 Postgresql Admin (should not be needed): _postgres, pgAdmin_
 
+Jenkins User: _student, student_
+
+Jenkins Admin (should not be needed): _admin_, see _/Users/student/.jenkins/secrets/initialAdminPassword_
