--- a/databases.adoc
+++ b/databases.adoc
@@ -66,7 +66,7 @@ We used psql to set up the persistent databases, as follows:
 These databases are used as follows:
 
 [[Databases]]
-.The Persisten Databases
+.The Persistent Databases
 [options="header",cols="2,4,5"]
 |====
 |DB name|Server DataSource|Description
