More password stuff

--- a/passwords.adoc
+++ b/passwords.adoc
@@ -2,7 +2,9 @@ Remote Skytap login (rarely used): _user, pw_
 
 Remote VM Login (for when you lock the remote screen): _student_, either _pw_ or _studentpw_
 
-Local Student login: n/a
+Local Student login (at LT Ed Center): n/a
+
+(For both LT systems, look closely at "password hint" :-) )
 
 Postgresql Web App access: _student, student_
 
