--- a/README.adoc
+++ b/README.adoc
@@ -72,7 +72,8 @@ done
 	!
 * Decide if you want JMS or not.
 If so, use config file standalone-full.xml in the following; if not, use standalone.xml
-and delete sourcecode/ex53solution
+and delete sourcecode/ex53solution.
+If so, see the README in ex53 for one additional step.
 * Merge configs/datasources into wildfly config file standalone/configuration/CHOSEN_CONFIG_FILE
 * Download Jenkins (latest LTS jenkins.war) from jenkins.org; copy it to WILDFLY_HOME/standalone/deployments
 * Start Wildfly: cd WILDFLY_HOME; bin/standalone -c standalone-full.xml
