--- a/README.adoc
+++ b/README.adoc
@@ -38,10 +38,11 @@ you could use a different App Server but you'd have to change
 all the Maven deployment configurations (most projects have 
 GlassFish and Tomcat in _pom.xml_, but this is unmaintained!!)
 AND the DataSource configurations (alas, the EE spec doesn't nail down how to do this).
-* MS-Windows users must also install cygwin, including:
-** git
-** diff
+* MS-Windows users must also install Cygwin 64 bit (includes shells and vi), including:
+** cygwin base;
+** git (at least the basic package, under devel);
 ** unzip
+** ssh or anything else you want.
 * Git clone the following projects into a single parent directory
 (in the course we use C:\ but anyplace *should* work):
 ----
@@ -53,15 +54,20 @@ do
 done
 ----
 * Create a 'student' account inside Postgres, giving the PostGres Admin password;
+----
 	psql <<!
 	create role student password 'student' login;
 	!
+----
 * Install the psql password file for this account:
+----
 	mkdir %APPADATA%\postgresql			# Windows step 1
 	copy configs\pgpass.conf %APPDATA%\postgresql # Windows step 2
 	cp configs/pgpass.conf ~/.pgpass	# *Nix, Mac step 1
 	chmod 0600 ~/.pgpass				# *Nix, Mac step 2
+----
 * Create databases:
+----
 	psql <<!
 	create user student password 'student' login nosuperuser;
 	create database ticketmanor owner student;
@@ -70,6 +76,7 @@ done
 	create database jpa_inheritance owner student;
 	create database jpa_aggregation owner student;
 	!
+----
 * Decide if you want JMS or not.
 If so, use config file standalone-full.xml in the following; if not, use standalone.xml
 and delete sourcecode/ex53solution.
@@ -80,7 +87,7 @@ If so, see the README in ex53 for one additional step.
 this line into the file application-users.properties file in the standalone/configuration directory
 	testuser=539580a56fb54850e92d0d2221b47359
 and this line into application-roles.properties.
-	testuser=testuser
+	testuser=guest,testuser
 Alternately you can create these manually the way we do in the exercise in the Security chapter.
 but the testuser account is needed by e.g., the JMS exercise.
 Obviously this username and password combination must not be used on any internet-accessible server!
